fixed z-index in navbar

--- a/src/style/HeaderStyle.css
+++ b/src/style/HeaderStyle.css
@@ -84,7 +84,7 @@
     .toggleBtnWrapper {
         display: inline-block;
         width: 3.5rem;
-        z-index: 100;
+        z-index: 200;
         cursor: pointer;
     }
 
@@ -98,6 +98,7 @@
         transform: translate(-50%, -50%);
         transition: 0.3s all;
         background-color: #efefefd9;
+        z-index:100;
     }
 }
 
